# COMP371Ass1

./: CMakeLists.txt  capsule02.cpp  main.cpp
recovery/refactor/: A1solution.cpp.glm-refactor  A1solution.h.glm-refactor
recovery/vscode-history/: A1solution.cpp.QIIW  A1solution.cpp.xKo9  A1solution.h.pSvk  A1solution.h.zmfm  CMakeLists.txt.1pIC
src/: A1solution.cpp  A1solution.h  CircleFragShad.glsl  CircleVertShad.glsl  FlatFragShad.glsl  FlatVertShad.glsl  VorFragShad.glsl  VorVertShad.glsl  blackFragShad.glsl  blackVertShad.glsl  phongFragShad.glsl  phongVertShad.glsl
